working on dropdown menu

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^5.0.0"
   },
   "dependencies": {
-    "gulp-uglifycss": "^1.1.0"
+    "gulp-uglifycss": "^1.1.0",
+    "jquery": "^3.6.0"
   }
 }
