--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-    "name":"osf-academy-project",
-    "description":"responsive website",
-    "version":"1.0.0",
-    "scripts":
-    {
-        "start":"node index.js"
+    "name": "osf-academy-project",
+    "description": "responsive website",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "node index.js"
     },
-    "repository":
-    {
-        "type":"git",
-        "url":"https://github.com/yuliiaye/osf-academy-yuliia-yevhenieva"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/yuliiaye/osf-academy-yuliia-yevhenieva"
     },
-    "devDependencies":
-    {
-        "gulp":"^4.0.2",
-        "gulp-sass":"^4.1.0",
-        "gulp-uglify":"^3.0.2",
-        "node-sass":"^5.0.0"
+    "devDependencies": {
+        "gulp": "^4.0.2",
+        "gulp-sass": "^4.1.0",
+        "gulp-uglify": "^3.0.2",
+        "node-sass": "^5.0.0"
     },
-    "dependencies":
-    {
-        "gulp-uglifycss":"^1.1.0",
-        "jquery":"^3.6.0"
+    "dependencies": {
+        "gulp-uglifycss": "^1.1.0",
+        "jquery": "^3.6.0"
     },
-    "engines":
-    {
-        "node":"15.x"
+    "engines": {
+        "node": "15.x"
     }
 }
